--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ baidu_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : #"Fannychini"
 facebook:
   username               :
   app_id                 :
@@ -99,9 +99,9 @@ og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  type                   : "BlueSky"
+  name                   : "Fannychini"
+  links: "https://bsky.app/profile/fannychini.bsky.social"
 
 # Analytics
 analytics:
@@ -114,30 +114,33 @@ analytics:
 # Site Author
 author:
   name             : "Fanny Franchini"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "data, healthcare, cancer research"
-  location         : "Melb"
+  avatar           : "/assets/images/bio.jpg"
+  bio              : "data, healthcare, cancer research, and some of my random interests"
+  location         : "Naarm, Australia"
   email            :
   links:
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/fannychini/"
-    - label: "Bluesky"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "fannychini.bsky.social"
+      icon: "fa-brands fa-github-alt"
+      url: "https://github.com/fannychini/"
+    - label: "BlueSky"
+      icon: "fa-brands fa-bluesky"
+      url: "https://bsky.app/profile/fannychini.bsky.social"
+    - label: "LinkedIn"
+      icon: "fa fa-fw fa-linkedin-square" 
+      url: "https://www.linkedin.com/in/fanny-franchini-b4062491/"
     - label: "ResearchGate"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://www.researchgate.net/profile/Fanny-Franchini?ev=hdr_xprf"
+      icon: "fab fa-fw fa-researchgate"
+      url: "https://www.researchgate.net/profile/Fanny-Franchini?ev=hdr_xprf"
     - label: "Google Scholar"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://scholar.google.com/citations?user=Q8wsyjEAAAAJ&hl=en"
+      icon: "<i class="fa-brands fa-google-scholar"></i>"
+      url: "https://scholar.google.com/citations?user=Q8wsyjEAAAAJ&hl=en"
 
 # Site Footer
 footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/fannychini/"
+      url: "https://github.com/fannychini/"
 
 
 # Reading Files
