--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Fanny Franchini"
-  avatar           : "/assets/images/bio.jpg"
+  avatar           : "/assets/images/bio.jpeg"
   bio              : "data, healthcare, cancer research, and some of my random interests"
   location         : "Naarm, Australia"
   email            :
@@ -126,7 +126,7 @@ author:
       icon: "fa-brands fa-bluesky"
       url: "https://bsky.app/profile/fannychini.bsky.social"
     - label: "LinkedIn"
-      icon: "fa fa-fw fa-linkedin-square" 
+      icon: "fa-brands fa-linkedin"
       url: "https://www.linkedin.com/in/fanny-franchini-b4062491/"
     - label: "ResearchGate"
       icon: "fab fa-fw fa-researchgate"
@@ -305,3 +305,23 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      layout: single
+      read_time: false
+      author_profile: true
+      share: false
+      comments: false
+      sidebar:
+        nav: "docs"
+
