--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Fanny Franchini"
 title_separator          : "-"
-subtitle                 : "Personal Site - Home"
+subtitle                 : "A take on things I enjoy"
 name                     : "Fannychini"
-description              : "All things on data, healthcare & cancer research"
+description              : "All things on data, healthcare, cancer research, and some of my random interests"
 url                      : "https://fannychini.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "fannychini/fannychini.github.io"
@@ -129,7 +129,7 @@ author:
       icon: "fa-brands fa-linkedin"
       url: "https://www.linkedin.com/in/fanny-franchini-b4062491/"
     - label: "ResearchGate"
-      icon: "fab fa-fw fa-researchgate"
+      icon: "fa-brands fa-researchgate" 
       url: "https://www.researchgate.net/profile/Fanny-Franchini?ev=hdr_xprf"
     - label: "Google Scholar"
       icon: "fa-brands fa-google-scholar"
