--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
  - title: "About"
    url: /about/
  - title: "Research"
-   url: /collection-archive/
+   url: /research/
  - title: "R world"
    url: /sitemap/
  - title: "Random posts"
