update posts and config

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
  - title: "Research"
    url: /research/
  - title: "R world"
-   url: /sitemap/
- - title: "Random posts"
-   url: /year-archive/
+   url: /riscool/
+ - title: "Randomness"
+   url: /randomness/
