--- a/_config.yml
+++ b/_config.yml
@@ -300,9 +300,9 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
   # _pages
@@ -319,7 +319,7 @@ defaults:
     values:
       layout: single
       read_time: false
-      author_profile: true
+      author_profile: false
       share: false
       comments: false
       sidebar:
