--- a/_config.yml
+++ b/_config.yml
@@ -312,6 +312,17 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _blog
+  - scope:
+      path: "_blog"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: true
+      related: true
   # _docs
   - scope:
       path: ""
