--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
  - title: "Research"
    url: /research/
  - title: "R world"
-   url: /riscool/
+   url: /posts/
  - title: "Randomness"
-   url: /randomness/
+   url: /blog/
